Add more information